--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ bytes = "1.2.1"
 http-body-util = "0.1.0-rc.1"
 serde_json = "1.0.87"
 pretty_env_logger = "0.4.0"
+uuid = {version = "1.2.1", features = ["v4"]}
