--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ http-body-util = "0.1.0-rc.1"
 serde_json = "1.0.87"
 pretty_env_logger = "0.4.0"
 uuid = {version = "1.2.1", features = ["v4"]}
+base64 = "0.13.1"
+libhydrogen = "0.4.1"
+serde = "1.0.147"
+serde_derive = "1.0.147"
